# FlixHabit

./: CMakeLists.txt  README.md  package-lock.json  package.json
frontend/flixhabit-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/flixhabit-frontend/public/data/: Premium_users.json  basic_users.json  genreForAgeGroup.json  genre_graph.json  similar_users.json  topActive_users.json
frontend/flixhabit-frontend/src/: App.jsx  index.css
frontend/flixhabit-frontend/src/components/: GraphDisplay.jsx  card.jsx  scroll-area.jsx  tabs.jsx
frontend/public/data/: Standard_users.json  avgWatchTimeByCountry.json  topActive_users.json
src/: Graph.cpp  Graph.h  MinHeap.cpp  MinHeap.h  Minheap.h  User.h  dataPreProcess.ipynb  dataPreProcess.py  main.cpp
